maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:59: error: not found: value getBuggleWorld
	getBuggleWorld().getCell(x,y)
        ^